# cf-ip-access-sync

./: AGENTS.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-26-cf-ip-access-sync.md  2026-05-26-interactive-setup.md
docs/superpowers/specs/: 2026-05-26-interactive-setup-design.md
src/cf_ip_access_sync/: __init__.py  cli.py  cloudflare.py  config.py  ip_detect.py  keychain.py  launchd.py  logging_utils.py  setup.py  sync.py
tests/: test_cli_status.py  test_cloudflare_payloads.py  test_ip_detect.py  test_launchd_plist.py  test_rule_selection.py  test_setup.py
