[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cf-ip-access-sync"
version = "0.1.0"
description = "Sync the current macOS public IP to a Cloudflare account-level whitelist IP Access Rule."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Alejandro Akbal" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
cf-ip-access-sync = "cf_ip_access_sync.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
